--- a/raids/p9s.yaml
+++ b/raids/p9s.yaml
@@ -35,6 +35,7 @@ status:
     id: 2911
     duration: 30000
     description: Reduces damage dealt by approximately 25%.
+    type: impairment
   physical-vuln:  # Physical Vulnerability Up
     id: 2940
     duration: 10000
@@ -458,6 +459,7 @@ actions:
     id: 33155
     description: These are the enormous [t:AoE]s indicated by blue markers during [a:lc1] and [a:lc2].
     mechanic: spread.chariot
+    raid-damage: false
     damage: 70000
   two-minds:  # Two Minds
     id: 33157
